--- a/main.mustache
+++ b/main.mustache
@@ -2,24 +2,20 @@
 > neofetch
 ```
 
-<img align="left" src="https://i.redd.it/h7dae4o0uk461.jpg" alt="Bakaguya made by レヴィノス (https://www.pixiv.net/en/artworks/80962527)" width="320" /> 
+<img align="left" src="https://imgs.search.brave.com/Hnk4oGAVmpLAeZ9zIVBk3qy6wcpDORMmw7pPgvVUV8o/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9pLm5h/dGdlb2ZlLmNvbS9u/LzU0ODQ2N2Q4LWM1/ZjEtNDU1MS05ZjU4/LTY4MTdhOGQyYzQ1/ZS9OYXRpb25hbEdl/b2dyYXBoaWNfMjU3/MjE4Ny5qcGc_dz0z/NzQmaD0yNTA" alt="cat" width="320" /> 
 
 ```csharp
-anordinaryusername@github
+justqnoo@github
 -------------------------
-OS: Arch Linux x86_64
-Shell: zsh 5.8
+OS: Windows 10 / MacOS
 Pronouns: He/Him
-Location: Artesia, CA
-Frameworks: React
-Languages: JavaScript, TypeScript,
+Location: United States
+Languages: JavaScript,
            HTML, CSS
-Learning: Node.js, Express, PostgreSQL,
-          Three.js, CPP
-Hobbies: Gardening, Cooking, Gaming
+Hobbies: Gaming & Coding
 Commits: {{ totalCommitsInPastYear }}
 Stars: {{ totalStars }}
-Discord: RandomPotato#1377
+Discord: mrdavidss
 ```
 <p align="left">
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
